# hibouair-bleuio-rust-readltime-desktop

./: .gitignore  Cargo.toml  README.md
assets/: main.css  tailwind.css
src/: main.rs
src/components/: dashboard.rs  mod.rs  sensor_panel.rs
src/hooks/: mod.rs  use_bleuio.rs
src/models/: bleuio.rs  hibouair.rs  mod.rs  sensor_data.rs
