[package]
name = "dxbleuio"
version = "0.1.0"
authors = ["Ulf Söderberg"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.43"
dioxus = { version = "0.7.3", features = ["desktop"] }
futures-channel = "0.3.31"
futures-util = "0.3.31"
hex = "0.4.3"
macos-app-nap = "0.0.1"
serde = "1.0.228"
serde_json = "1.0.149"
serial2-tokio = "0.1.19"
serialport5 = "5.0.2"
tokio = "1.49.0"
zerocopy = { version = "0.8.33", features = ["derive"] }

[features]
default = ["desktop"]
# web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
# mobile = ["dioxus/mobile"]
# server = ["dioxus/server"]
logging = []
using_ble = []
